log/build_2026-03-23_17-37-29/bot_application/stdout_stderr.log
/home/rose/.local/lib/python3.10/site-packages/setuptools/_distutils/dist.py:287: UserWarning: Unknown distribution option: 'tests_require'
  warnings.warn(msg)
running egg_info
writing ../../build/bot_application/bot_application.egg-info/PKG-INFO
writing dependency_links to ../../build/bot_application/bot_application.egg-info/dependency_links.txt
writing entry points to ../../build/bot_application/bot_application.egg-info/entry_points.txt
writing requirements to ../../build/bot_application/bot_application.egg-info/requires.txt
writing top-level names to ../../build/bot_application/bot_application.egg-info/top_level.txt
reading manifest file '../../build/bot_application/bot_application.egg-info/SOURCES.txt'
writing manifest file '../../build/bot_application/bot_application.egg-info/SOURCES.txt'
running build
running build_py
copying bot_application/init_robot_pose_door.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/get_cost.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/get_robot_pose.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/init_robot_pose_point1.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/auto_optimized_navigator.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/init_robot_pose_point3.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/optimized_navigator.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/waypoint_cost_calculator.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/__init__.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/nav_through_pose.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/way_to_go.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/waypoint_follower.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/nav_to_pose.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/init_robot_pose.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
copying bot_application/init_robot_pose_point2.py -> /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application
running install
running install_lib
copying /home/rose/pi4b_ros2/car_ws/build/bot_application/build/lib/bot_application/optimized_navigator.py -> /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/python3.10/site-packages/bot_application
byte-compiling /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/python3.10/site-packages/bot_application/optimized_navigator.py to optimized_navigator.cpython-310.pyc
byte-compiling /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/python3.10/site-packages/bot_application/waypoint_cost_calculator copy.py to waypoint_cost_calculator copy.cpython-310.pyc
  File "/home/rose/pi4b_ros2/car_ws/install/bot_application/lib/python3.10/site-packages/bot_application/waypoint_cost_calculator copy.py", line 196
    create_goal_pose(navigator, 0.97, 0.72, 0.0)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
copying resource/bot_application -> /home/rose/pi4b_ros2/car_ws/install/bot_application/share/ament_index/resource_index/packages
copying package.xml -> /home/rose/pi4b_ros2/car_ws/install/bot_application/share/bot_application
running install_egg_info
removing '/home/rose/pi4b_ros2/car_ws/install/bot_application/lib/python3.10/site-packages/bot_application-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/bot_application/bot_application.egg-info to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/python3.10/site-packages/bot_application-0.0.0-py3.10.egg-info
running install_scripts
Installing auto_optimized_navigator script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
Installing get_robot_pose script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
Installing init_robot_pose script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
Installing init_robot_pose_door script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
Installing init_robot_pose_point1 script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
Installing init_robot_pose_point2 script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
Installing init_robot_pose_point3 script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
Installing nav_through_pose script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
Installing optimized_navigator script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
Installing way_to_go script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
Installing waypoint_cost_calculator script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
Installing waypoint_cost_calculator_copy script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
Installing waypoint_follower script to /home/rose/pi4b_ros2/car_ws/install/bot_application/lib/bot_application
writing list of installed files to '/home/rose/pi4b_ros2/car_ws/build/bot_application/install.log'
